@@ -15,8 +15,10 @@ gdm (2.16.4-2) UNRELEASED; urgency=low
     gnome-doc-utils.
   * Use full path to gdmsetup in menu file.
   * Fix "closes:" in 2.2.5.2-1 and 2.13.0.10-1.
+  * Version the debhelper build-dep to >= 4 and set Debhelper compatibility
+    level via debian/compat to 4 instead of via DH_COMPAT in rules.
 
- -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 12:45:06 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 12:46:17 +0200
 
 gdm (2.16.4-1.1) unstable; urgency=low
 
